# math-parser

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: mathparser.hpp
src/: main.cpp  mathparser.cpp  mathparser.hpp
tests/: test_mathparser.cpp
